--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
-    "pg": "^8.5.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
