--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joi": "^17.8.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.21",
     "ts-node": "^9.1.1",
     "tslint": "^6.1.3",
     "typescript": "^4.2.3"
