--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "tsc && nodemon dist/app.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
-    "joi": "^17.8.3"
+    "joi": "^17.8.3",
+    "mongoose": "^7.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
