--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "joi": "^17.8.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
